@@ -1,3 +1,8 @@
+Mon Nov  8 09:36:55 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* acinclude.m4: Improve quoting to stop aclocal complaining. Improve
+	  indentation. Get rid of unnecessary changequote().
+
 Sun Nov  7 16:07:26 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_wait): Close pipeline output before
